--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "glob": "^7.1.6",
+    "json-2-csv": "^3.7.1",
     "next": "^9.3.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
