--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "glob": "^7.1.6",
+    "got": "^11.8.0",
     "json-2-csv": "^3.7.1",
     "next": "^9.3.3",
     "react": "^16.13.0",
