--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "next": "^9.3.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.55",
+    "typescript": "^4.0.5"
   }
 }
